# pyside-pyside-tools

./: CMakeLists.txt  README.md  pyside_tool.py  qt_attribution.json
pylupdate/: CMakeLists.txt  fetchtr.cpp  metatranslator.cpp
pyrcc/: CMakeLists.txt  main.cpp  rcc.cpp
pyside2uic/: __init__.py.in  uiparser.py
pyside2uic/Compiler/: qobjectcreator.py
tests/: CMakeLists.txt
